// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification component Should use use color black 1`] = `
<DocumentFragment>
  <div
    class="notification is-black"
  >
    <p>
      Default
    </p>
  </div>
</DocumentFragment>
`;

exports[`Notification component Should use use color danger 1`] = `
<DocumentFragment>
  <div
    class="notification is-danger"
  >
    <p>
      Default
    </p>
  </div>
</DocumentFragment>
`;

exports[`Notification component Should use use color dark 1`] = `
<DocumentFragment>
  <div
    class="notification is-dark"
  >
    <p>
      Default
    </p>
  </div>
</DocumentFragment>
`;

exports[`Notification component Should use use color info 1`] = `
<DocumentFragment>
  <div
    class="notification is-info"
  >
    <p>
      Default
    </p>
  </div>
</DocumentFragment>
`;

exports[`Notification component Should use use color light 1`] = `
<DocumentFragment>
  <div
    class="notification is-light"
  >
    <p>
      Default
    </p>
  </div>
</DocumentFragment>
`;

exports[`Notification component Should use use color link 1`] = `
<DocumentFragment>
  <div
    class="notification is-link"
  >
    <p>
      Default
    </p>
  </div>
</DocumentFragment>
`;

exports[`Notification component Should use use color null 1`] = `
<DocumentFragment>
  <div
    class="notification"
  >
    <p>
      Default
    </p>
  </div>
</DocumentFragment>
`;

exports[`Notification component Should use use color primary 1`] = `
<DocumentFragment>
  <div
    class="notification is-primary"
  >
    <p>
      Default
    </p>
  </div>
</DocumentFragment>
`;

exports[`Notification component Should use use color success 1`] = `
<DocumentFragment>
  <div
    class="notification is-success"
  >
    <p>
      Default
    </p>
  </div>
</DocumentFragment>
`;

exports[`Notification component Should use use color warning 1`] = `
<DocumentFragment>
  <div
    class="notification is-warning"
  >
    <p>
      Default
    </p>
  </div>
</DocumentFragment>
`;

exports[`Notification component Should use use color white 1`] = `
<DocumentFragment>
  <div
    class="notification is-white"
  >
    <p>
      Default
    </p>
  </div>
</DocumentFragment>
`;

exports[`Notification component should concat classname in props with classname 1`] = `
<DocumentFragment>
  <div
    class="notification other-class this-is-a-test"
  >
    <p>
      Default
    </p>
  </div>
</DocumentFragment>
`;

exports[`Notification component should have notification classname 1`] = `
<DocumentFragment>
  <div
    class="notification"
  >
    <img
      alt="placeholder"
      src="http://bulma.io/images/placeholders/128x128.png"
    />
  </div>
</DocumentFragment>
`;

exports[`Notification component should render 1`] = `
<DocumentFragment>
  <div
    class="notification"
  />
</DocumentFragment>
`;

exports[`Notification component should render as Section 1`] = `
<DocumentFragment>
  <section
    class="notification"
  >
    <p>
      Default
    </p>
  </section>
</DocumentFragment>
`;

exports[`Notification component should use inline styles 1`] = `
<DocumentFragment>
  <div
    class="notification"
    style="height: 250px;"
  >
    <p>
      Default
    </p>
  </div>
</DocumentFragment>
`;
